summer-jaeb/tests/compile_fail/retry_on_sync.stderr
error: `retries` and retry strategy attributes are only supported on async handlers — sync handlers execute exactly once (failures produce dead letters when enabled)
  --> tests/compile_fail/retry_on_sync.rs:10:1
   |
10 | fn on_event(event: &MyEvent) -> HandlerResult {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `jaeb::HandlerResult`
 --> tests/compile_fail/retry_on_sync.rs:4:5
  |
4 | use jaeb::HandlerResult;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
